# wc2026-tracker

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Procfile  fly.toml  pyproject.toml  railway.json  render.yaml  tippningar.xlsx
backend/wc2026_backend/: __init__.py  app.py  cli.py  config.py  fixtures.py  live.py  names.py  service.py  standings_view.py  store.py  store_factory.py  store_supabase.py
backend/wc2026_backend/sources/: __init__.py  eloratings.py  espn.py  football_data.py
docs/: DEPLOY.md
engine/: wc2026_sim.py
engine/wc2026/: __init__.py  __main__.py  elo.py  model.py  simulate.py  standings.py  structure.py  thirds.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  flags.ts  i18n.ts  modelPick.ts  realtime.ts  theme.css  tippningar.ts  types.ts
frontend/src/components/: Bracket.tsx  FocusPicker.tsx  GroupStandings.tsx  MatchList.tsx  ModelPick.tsx  OddsTable.tsx  RaceChart.tsx  SwedenDeepDive.tsx  SwedenPanel.tsx  TeamFocus.tsx  Tippningar.tsx  VitalMatches.tsx  WhatIf.tsx
scripts/: parse_tippningar.py
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_analysis.sql
tests/: reference_impl.py  test_backend.py  test_conditioning.py  test_elo.py  test_live.py  test_reference.py  test_standings.py  test_store_factory.py  test_structure.py  test_thirds.py
tests/fixtures/: espn_scoreboard.json
